<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewAMPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TableRow>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/username" />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>
        <CheckBox
            android:id = "@+id/isRememberPassword"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Remember username and password?"
            />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/button_login"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/button_cancel"
            android:onClick="onClick"/>
    </TableRow>

</TableLayout>
