<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amps.fyp_amps_android_yishan.AssetsPropertiesFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewAssetName"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/assetname" />

            <EditText
                android:id="@+id/editTextAssetName"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewUnderProject"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/underproject" />

            <EditText
                android:id="@+id/editTextUnderProject"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewWorkflow"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/workflow" />

            <Spinner
                android:id="@+id/spinnerWorkflow"
                android:layout_width="0px"
                android:layout_gravity="left|top"
                android:layout_weight="0.7"
                android:entries="@array/workflowvalue" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewCurrentStep"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/currentstep" />

            <Spinner
                android:id="@+id/spinnerCurrentStep"
                android:layout_width="0px"
                android:layout_gravity="left|top"
                android:layout_weight="0.7"
                android:entries="@array/currentstepvalue" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewAssignedUser"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/assigneduser" />

            <EditText
                android:id="@+id/editTextAssignedUser"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewTrackingStatus"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/trackingstatus" />

            <EditText
                android:id="@+id/editTextTrackingStatus"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewEstimatedStart"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/estimatedstart" />

            <EditText
                android:id="@+id/editTextEstimatedStart"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewEstimatedEnd"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/estimatedend" />

            <EditText
                android:id="@+id/editTextEstimatedEnd"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewActualStart"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/actualstart" />

            <EditText
                android:id="@+id/editTextActualStart"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewActualEnd"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.3"
                android:text="@string/actualend" />

            <EditText
                android:id="@+id/editTextActualEnd"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.7"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <View
                android:layout_width="0px"
                android:layout_height="1dip"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/dividerVertical" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="0.45"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/update" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0px"
                android:layout_gravity="center_vertical|right"
                android:layout_weight="0.45"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/cancel" />
        </TableRow>
    </TableLayout>

</FrameLayout>
